kubernetes/apps/productivity/linkwarden/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: linkwarden.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - linkwarden.krapulax.dev
  rules:
    - backendRefs:
        - name: linkwarden-app
          namespace: productivity
          port: 80
